--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, height=device-height">
+    <meta name="viewport" content="width=100vw, initial-scale=1, maximum-scale=1.0, shrink-to-fit=no, height=100vh">
     <meta name="theme-color" content="#000000">
     <script src="https://verify.sendwyre.com/js/widget-loader.js"></script>
     <!--
