--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, shrink-to-fit=no, user-scalable=no, height=100vh">
     <meta name="theme-color" content="#000000">
-    <script src="https://verify.sendwyre.com/js/widget-loader.js"></script>
+    <script src="https://verify.testwyre.com/js/widget-loader.js"></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
